# src/dto/bookCopy.dto.ts
@@ -1,3 +1,9 @@
-export interface BookCopyDTO {
+import { BookDTO } from "./book.dto";
 
+export interface BookCopyDTO {
+  id?: number;
+  bookId: number;
+  available: number;
+  state: number;
+  book?: BookDTO;
 }
